<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment5">

    <ImageButton
        android:id="@+id/imgBack5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:src="@drawable/vector_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo5"
        style="@style/Titulo"
        android:layout_width="@dimen/width_title"
        android:layout_height="@dimen/heigh_title"
        android:layout_marginTop="20dp"
        android:text="@string/cuentanos_un_poco_de_ti"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack5" />

    <TextView
        android:id="@+id/tvTexto6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/rango_paginas"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo5" />

    <EditText
        android:id="@+id/etNumPagS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/_0"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/etNumPagE"
        app:layout_constraintStart_toStartOf="@+id/tvTexto6"
        app:layout_constraintTop_toBottomOf="@id/tvTexto6" />

    <TextView
        android:id="@+id/puntos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/puntos"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/etNumPagE"
        app:layout_constraintStart_toEndOf="@+id/etNumPagS"
        app:layout_constraintTop_toBottomOf="@+id/tvTexto6" />

    <EditText
        android:id="@+id/etNumPagE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/_100"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvTexto6"
        app:layout_constraintStart_toEndOf="@+id/etNumPagS"
        app:layout_constraintTop_toBottomOf="@id/tvTexto6" />

    <Button
        android:id="@+id/btBotonSiguiente5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/boton_finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/puntos" />

</androidx.constraintlayout.widget.ConstraintLayout>