<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imgBack4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@color/white"
        android:src="@drawable/vector_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo3"
        style="@style/Titulo"
        android:layout_width="@dimen/width_title"
        android:layout_height="@dimen/heigh_title"
        android:layout_marginTop="20dp"
        android:text="@string/cuentanos_un_poco_de_ti"
        android:textColor="@color/blue"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="-5"
        android:shadowRadius="4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack4" />

    <TextView
        android:id="@+id/tvTexto5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:text="@string/escoge_al_menos_5_autores"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo3"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAutores"
        android:layout_width="240dp"
        android:layout_height="400dp"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@+id/tvTexto5"
        app:layout_constraintBottom_toTopOf="@+id/btBotonSiguiente4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btBotonSiguiente4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/button_siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/recyclerAutores" />

</androidx.constraintlayout.widget.ConstraintLayout>
